# tensorrt-laboratory

./: CMakeLists.txt  Dockerfile  Dockerfile.cmake  Makefile  devel.cmake.sh  requirements.txt
cmake/: GRPCGenerateCPP.cmake  dependencies.cmake
dockerfiles/: Dockerfile
examples/: CMakeLists.txt
examples/00_TensorRT/: CMakeLists.txt  flowers_2020.cc  infer.cc  new_infer.cc
examples/02_TensorRT_GRPC/src/: server.cc
examples/99_LoadBalancer/: Dockerfile  lb-envoy.j2  run_loadbalancer.py
examples/MIG/: CMakeLists.txt  server.cc
examples/SpeechSquad/: CMakeLists.txt  context.cc  context.h  main.cc  resources.cc  resources.h  settings.h  speech_squad.proto
examples/SpeechSquad/jarvis_proto/: CMakeLists.txt  audio.proto  health.proto  jarvis_asr.proto  jarvis_cv.proto  jarvis_nlp.proto  jarvis_nlp_core.proto  jarvis_tts.proto
examples/SpeechSquad/squad_perf_client/: CMakeLists.txt  audio_task.cc  audio_task.h  speech_squad_client.cc  speech_squad_client.h  squad_eval_dataset.cc  squad_eval_dataset.h  squad_perf_client.cc  status.cc  status.h  stream.h  sync_queue.h  thread-pool.h  utils.cc  utils.h
examples/SpeechSquad/tests/: CMakeLists.txt  test_client.h  test_context.cc  test_context.h  test_service.cc
examples/TRTIS/: CMakeLists.txt
examples/TRTIS/async_client/: CMakeLists.txt  trtis_client.cc
examples/nvRPC/SharedMemoryService/: client.cc  server.cc
models/onnx/: resize.py
trtlab/: CMakeLists.txt
trtlab/core/include/trtlab/core/: fiber_group.h
trtlab/core/tests/: test_pool.cc
trtlab/jarvis/: run_trt_container.sh
trtlab/jarvis/models/: build_engines.sh  export_jasper_onnx_to_trt.py
trtlab/jarvis/notebooks/: speech_features.py  speech_utils.py  testing jarvis matrices.ipynb
trtlab/jarvis/tests/: CMakeLists.txt  audio_buffer.h  builder.cc  builder.h  config.h  context.cc  context.h  context_impl.h  context_pointers.cc  context_pointers.h  cuda_matrix.cu  cuda_matrix.h  cuda_mel_banks.cu  cuda_mel_banks.h  cuda_vector.cu  cuda_vector.h  jarvis_asr.cc  jarvis_asr.h  jarvis_asr_impl.h  mel_banks.cc  mel_banks.h  pipeline.cc  pipeline.h  resources.h  test_config.cc  test_gather_audio_batch.cc  test_gather_normalized_features.cc  test_jarvis.cc  test_jarvis.h  test_mel_banks.cc  test_scatter_features.cc  test_tensorrt.cc
trtlab/jarvis/tests/pipeline/: audio_collector.cu  audio_collector.h  extract_fft_windows.cu  extract_fft_windows.h  gather_audio_batch.cu  gather_audio_batch.h  gather_normalized_features.cu  gather_normalized_features.h  mel_banks_compute.cu  mel_banks_compute.h  power_spectrum.cu  power_spectrum.h  process_audio.cu  process_audio.h  scatter_features.cu  scatter_features.h  scatter_normalized_features.cu  scatter_normalized_features.h
trtlab/memory/: CMakeLists.txt
trtlab/memory/cmake/: dependencies.cmake
trtlab/memory/src/: CMakeLists.txt
trtlab/nvrpc/: CMakeLists.txt
trtlab/nvrpc/include/nvrpc/: life_cycle_streaming.h  life_cycle_unary.h
trtlab/nvrpc/include/nvrpc/client/: client_single_up_multiple_down.h  client_streaming_v2.h  client_unary.h
trtlab/nvrpc/src/client/: executor.cc
trtlab/pybind/trtlab/: CMakeLists.txt  infer.cc
trtlab/rm/include/trtlab/rm/: cache.h  manager.h  memory.h  serialize.h
trtlab/rm/src/: manager.cc  plugin.cc  private_interfaces.h
